# touRAG2

./: .gitignore  LICENSE  README.md  agent.py  app.py  pyproject.toml
src/touRAG2/: agent.py  app.py
